--- a/styles.scss
+++ b/styles.scss
@@ -10,8 +10,8 @@
 
 //Uncomment one of the following lines to choose a theme:
 @import "../_sass/yotsuba";
-// @import "../_sass/edith";
- @import "../_sass/web1";
+ @import "../_sass/edith";
+//@import "../_sass/web1";
 // @import "../_sass/vellum";
 // @import "../_sass/paper";
 // @import "../_sass/heaven";
@@ -41,7 +41,9 @@ $bg-image: theme; /* <-- leave default theme BG image */
 
 //$bg-image: url(assets/imgs/BGs/bgtile-4.png);
 
-$bg-image: url(assets/imgs/BGs/bgtile-18.png);
+//$bg-image: url(assets/imgs/BGs/bgtile-18.png);
+
+$bg-image: url(assets/imgs/BGs/bg-eva.gif);
 
 /*There are 30 sample background tiles to choose from in assets > imgs > BGs*/
 
