--- a/styles.scss
+++ b/styles.scss
@@ -43,7 +43,7 @@ $bg-image: theme; /* <-- leave default theme BG image */
 
 //$bg-image: url(assets/imgs/BGs/bgtile-18.png);
 
-$bg-image: url(assets/imgs/BGs/bg-eva.gif);
+//$bg-image: url(assets/imgs/BGs/bg-eva.gif);
 
 /*There are 30 sample background tiles to choose from in assets > imgs > BGs*/
 
