--- a/styles.scss
+++ b/styles.scss
@@ -14,7 +14,7 @@
 //@import "../_sass/web1";
 // @import "../_sass/vellum";
 // @import "../_sass/paper";
- @import "../_sass/heaven";
+// @import "../_sass/heaven";
 //@import "../_sass/gemini"; // Doesn't work yet
 
 
@@ -43,7 +43,7 @@ $bg-image: theme; /* <-- leave default theme BG image */
 
 //$bg-image: url(assets/imgs/BGs/bgtile-18.png);
 
-//$bg-image: url(assets/imgs/BGs/bg-yotsuba.gif);
+$bg-image: url(assets/imgs/BGs/bg-yotsuba.gif);
 
 /*There are 30 sample background tiles to choose from in assets > imgs > BGs*/
 
