--- a/styles.scss
+++ b/styles.scss
@@ -28,9 +28,9 @@
 Uncomment one of the below lines to override the background color/image of your chosen theme. 'theme' will leave the default theme background. */
 
 
-//$bg-color: theme; /* <-- leave default theme BG color */
+$bg-color: theme; /* <-- leave default theme BG color */
 
-//$bg-image: theme; /* <-- leave default theme BG image */
+$bg-image: theme; /* <-- leave default theme BG image */
 
 
 //$bg-image: url(assets/imgs/BGs/bgtile-1.png);
