--- a/exocore/_sass/_edith.scss
+++ b/exocore/_sass/_edith.scss
@@ -13,7 +13,7 @@ $color-items: black;
 $color-text: white;
 $color-subtext: white;
 $color-code: pink;
-$internal-links: orange;
+$internal-links: white;
 $external-links: chocolate;
 $invalid-links: $internal-links;
 $color-primary: white;
